--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 											<div class="inner">
 												<h4>Seedling tolerances to heat, drought and frost are correlated across temperate tree species</h4>
 												<p>Most trees die as seedlings, and a large part of this mortality is caused by environmental stress, such as drought or frost. Whether there are trade-offs or positive correlations between tolerances to different climatic stressors can determine species’ survival in the rapidly changing climate. We show how stress tolerance to frost, drought and heat at seedling stage correlates across temperate tree species, but, surprisingly, is not related to the distributions of adult trees. This shows how adult distributions, especially of long-lived species like trees, might not be indicative of the optimal climate for the seedlings.  </p>
+												<p>Read the article <a href="http://doi.org/10.1111/1365-2745.14254">here</a>.</p>
 											</div>
 										<article>
 											<a href="https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/1365-2435.14228" class="image"><img src="images/meadow.jpg" alt="" /></a>
