--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://bsky.app/profile/kristiinav.bsky.social" class="icon brands fa-bluesky"><span class="label">Bluesky</span></a></li>
+						<li><a href="https://bsky.app/profile/kristiinav.bsky.social" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.flickr.com/photos/131013064@N05/" class="icon brands fa-flickr"><span class="label">Flickr</span></a></li>
 						<li><a href="mailto:kristiina.visakorpi@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
@@ -72,10 +72,10 @@
 									<p></p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-puzzle-piece">How do evolutionary processes, such as rapid evolution and local adaptation, affect ecological dynamics?</li>
-										<li class="icon solid fa-tree">How do plant physiological traits affect community- and ecosystem-level processes?</li>
+										<li class="icon solid fa-tree">Can functional traits be used to predict community- and ecosystem-level processes?</li>
 										<li class="icon solid fa-leaf">How does insect herbivory affect the host plant, and what are the ecosystem-level impacts of this?</li>
 										<li class="icon solid fa-balance-scale">What should be the priorities of ecological research? What type of research is useful?</li>
-										<li class="icon solid fa-question-circle">Is ecological research reliable? Do our most influential studies replicate?</li>
+										<li class="icon solid fa-question-circle">How do we want academia to look like in the future? How to create transformational change to achieve that vision?</li>
 										<li class="icon solid fa-hourglass-half">What should be the role of ecological researchers in the times of the climate and ecological crises? </li>
 									</ul>
 								</div>
@@ -88,6 +88,13 @@
 									<p></p>
 									<div class="features">
                                         <article>
+											<a href="#" class="image"><img src="images/roles.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>What should be the role of ecological researchers in the times of environmental crisis?</h4>
+												<p>As the climate crisis keeps getting more critical, and the loss of biodiversity continues, ecological researchers are faced with a dilemma: are we supposed to continue our research as usual, or does the crisis of nature we witness compel us to speak up and take action? The disappearance of nature is an existential crisis not just to our societies, but also to our profession as ecologists: we are losing the very target of our study. Do the times of crisis require a redefinition of the role of ecological researcher towards society? If so, what responsibilities come with the different roles we can (and should) take?</p>
+												<p>I have explored this theme by organizing an international workshop in February 2024 (<a href="https://andinachile2024.org/">"Ecology for a Social Revolution"</a>), a workshop at the annual meeting of the British Ecological Society in 2023 (“A research career vs campaigning for change – a false dichotomy?”) and by giving talks and running workshops locally for researchers and students.</p>
+											</div>
+										<article>					
 											<a href="#" class="image"><img src="images/impatiens.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>The role of species interactions and local adaptation in determining the range limits of <i>Impatiens glandulifera</i></h4>
