--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 									<p></p>
 									<div class="features">
                                         <article>
-											<a href="#" class="image"><img src="images/roles.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/roles2.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>What should be the role of ecological researchers in the times of environmental crisis?</h4>
-												<p>As the climate crisis keeps getting more critical, and the loss of biodiversity continues, ecological researchers are faced with a dilemma: are we supposed to continue our research as usual, or does the crisis of nature we witness compel us to speak up and take action? The disappearance of nature is an existential crisis not just to our societies, but also to our profession as ecologists: we are losing the very target of our study. Do the times of crisis require a redefinition of the role of ecological researcher towards society? If so, what responsibilities come with the different roles we can (and should) take?</p>
-												<p>I have explored this theme by organizing an international workshop in February 2024 (<a href="https://andinachile2024.org/">"Ecology for a Social Revolution"</a>), a workshop at the annual meeting of the British Ecological Society in 2023 (“A research career vs campaigning for change – a false dichotomy?”) and by giving talks and running workshops locally for researchers and students.</p>
+												<h4>What should the role of ecological researchers be in the times of environmental crisis?</h4>
+												<p>As the climate crisis and loss of biodiversity continue, ecological researchers are faced with a dilemma: are we supposed to continue our research as usual, or does the crisis of nature we witness compel us to speak up and take action? The disappearance of nature is an existential crisis not just to our societies, but also to our profession: we are losing the very target of our study. Do the times of crisis require a redefinition of the role of ecological researcher towards society? If so, what responsibilities come with the different roles we can (and should) take?</p>
+												<p>I have explored this theme by organizing workshops internationally (<a href="https://andinachile2024.org/">"Ecology for a Social Revolution"</a>, “A research career vs campaigning for change – a false dichotomy?” at BES annulam eeting in 2023) and by giving talks and running workshops locally.</p>
 											</div>
 										<article>					
 											<a href="#" class="image"><img src="images/impatiens.jpg" alt="" /></a>
