--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 											<div class="inner">
 												<h4>What should the role of ecological researchers be in the times of environmental crisis?</h4>
 												<p>As the climate crisis and loss of biodiversity continue, ecological researchers are faced with a dilemma: are we supposed to continue our research as usual, or does the crisis of nature we witness compel us to speak up and take action? The disappearance of nature is an existential crisis not just to our societies, but also to our profession: we are losing the very target of our study. Do the times of crisis require a redefinition of the role of ecological researcher towards society? If so, what responsibilities come with the different roles we can (and should) take?</p>
-												<p>I have explored this theme by organizing workshops internationally (<a href="https://andinachile2024.org/">"Ecology for a Social Revolution"</a>, <a href="https://www.britishecologicalsociety.org/events/bes-annual-meeting-2023/workshops/">"A research career vs campaigning for change – a false dichotomy?"</a>) and by giving talks and running workshops locally.</p>
+												<p>I have explored this theme by organizing workshops internationally (<a href="https://riojournal.com/article/152859/">"Ecology for a social revolution"</a>, <a href="https://www.britishecologicalsociety.org/events/bes-annual-meeting-2023/workshops/">"A research career vs campaigning for change – a false dichotomy?"</a>) and by giving talks and running workshops locally.</p>
 											</div>
 										<article>					
 											<a href="#" class="image"><img src="images/impatiens.jpg" alt="" /></a>
@@ -120,7 +120,7 @@
 											<div class="inner">
 												<h4>Community and ecosystem -level effects of insect herbivory in temperate forests</h4>
 												<p>During my PhD I studied how herbivory by caterpillars of Winter moth (<i>Operophtera brumata</i>) affect the gas exchange and chemistry of their host plant, oak (<i>Quercus robur</i>). </p>
-												<p>Read about the effects of insect herbivory on oak physiology in <a href="https://nph.onlinelibrary.wiley.com/doi/10.1111/nph.15338">New Phytologist</a>, and in <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0228157">Plos One</a>. This paper in <a href="https://doi.org/10.1002/ecy.2739">Ecology</a> describes the effects of early-season herbivory on the late-season insect community on oaks. And in this <a href="https://doi.org/10.1101/2021.01.28.428605.">preprint</a> I estimate the effects of insect herbivory on the carbon cycle of a temperate forest.</p>
+												<p>Read about the effects of insect herbivory on oak physiology in <a href="https://nph.onlinelibrary.wiley.com/doi/10.1111/nph.15338">New Phytologist</a>, and in <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0228157">Plos One</a>. This paper in <a href="https://doi.org/10.1002/ecy.2739">Ecology</a> describes the effects of early-season herbivory on the late-season insect community on oaks. And in this <a href="https://doi.org/10.5194/we-24-97-2024">recent paper</a> I estimate the effects of insect herbivory on the carbon cycle of a temperate forest.</p>
 											</div>
 										</article>
 										<article>
