--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/omakuva3_square.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Kristiina Visakorpi</a></h1>
-					<p>A postdoc at NTNU interested in plant ecology and ecophysiology, species interactions and eco-evolutionary dynamics.</p>
+					<p>An assistant professor at University of South Florida working on plant ecology and ecophysiology, species interactions and eco-evolutionary dynamics.</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -54,10 +54,8 @@
 										<h2>Kristiina Visakorpi</h2>
 										
 									</header>
-									<p> I am post-doctoral ecologist working at the Norwegian University of Science and Technology in Trondheim. I am interested in species interactions, and how they influence community structure, ecosystem-level processes, and evolutionary dynamics. </p>
-									<p> My current work focuses on the eco-evolutionary dynamics of the invasive plant species <i>Impatiens glandulifera</i>. I am interested in finding out what determines the distributional limits of the species, and what makes the species so successful on its invasive range in Europe. For this, I use a combination of field surveys, greenhouse experiments and genomic analyses.</p>
-									<p>	During my previous post-doc at ETH Zürich, I studied how tolerance to environmental stress varies across seedlings of temperate tree species, and how eco-physiological traits can predict plant species’ demographic responses to warming in the Swiss Alps. During my PhD at the University of Oxford, I studied how insect herbivory changes the physiology of the host plant, and how these physiological changes further affect community- and ecosystem-level processes. For my Master’s degree at the University of Helsinki, I investigated trophic cascades in a high-arctic food web in Eastern Greenland.  </p>
-									<p> Alongside research, I am a climate activist. In my experience, non-violent, disruptive actions are the most effective way to start important discussions, and to push for the systemic changes needed to bring down carbon emissions. I have been active in groups such as <a href="https://rebellion.global/">Extinction Rebellion</a>, <a href="https://scientistrebellion.org/">Scientist Rebellion</a> and <a href="https://www.stoppoljeletinga.no/">Stopp Oljeletinga</a>.</p>
+									<p> I'm as assistant professor at the Department of Integrative Biology at University of South Florida.  I am interested in species interactions, and how they influence community structure, ecosystem-level processes, and evolutionary dynamics. </p>
+									<p> Alongside research, I am a climate activist. In my experience, non-violent, disruptive actions are an effective way to start important discussions, and to push for the systemic changes needed to bring down carbon emissions. I have been active in groups such as <a href="https://rebellion.global/">Extinction Rebellion</a>, <a href="https://scientistrebellion.org/">Scientist Rebellion</a> and <a href="https://www.stoppoljeletinga.no/">Stopp Oljeletinga</a>.</p>
 									<div class="image main" data-position="center">
 										<img src="images/omakuva2.jpg" alt="" />
 									</div>
@@ -75,8 +73,8 @@
 										<li class="icon solid fa-tree">Can functional traits be used to predict community- and ecosystem-level processes?</li>
 										<li class="icon solid fa-leaf">How does insect herbivory affect the host plant, and what are the ecosystem-level impacts of this?</li>
 										<li class="icon solid fa-balance-scale">What should be the priorities of ecological research? What type of research is useful?</li>
-										<li class="icon solid fa-question-circle">How do we want academia to look like in the future? How to create transformational change to achieve that vision?</li>
-										<li class="icon solid fa-hourglass-half">What should be the role of ecological researchers in the times of the climate and ecological crises? </li>
+										<li class="icon solid fa-question-circle">How can we make our academic instituions more democratic and sustainable? </li>
+										<li class="icon solid fa-hourglass-half">What should the role of ecological researchers be in the times of the climate and ecological crises? </li>
 									</ul>
 								</div>
 							</section>
@@ -490,3 +488,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
