--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 										<h2>Kristiina Visakorpi</h2>
 										
 									</header>
-									<p> I'm as assistant professor at the Department of Integrative Biology at University of South Florida.  I am interested in species interactions, and how they influence community structure, ecosystem-level processes, and evolutionary dynamics. </p>
-									<p> Alongside research, I am a climate activist. In my experience, non-violent, disruptive actions are an effective way to start important discussions, and to push for the systemic changes needed to bring down carbon emissions. I have been active in groups such as <a href="https://rebellion.global/">Extinction Rebellion</a>, <a href="https://scientistrebellion.org/">Scientist Rebellion</a> and <a href="https://www.stoppoljeletinga.no/">Stopp Oljeletinga</a>.</p>
+									<p> I'm an assistant professor at the Department of Integrative Biology at University of South Florida. I am interested in how plants tolerate and recover from environmental stress related to climate change, such as extreme heat, sea level rise or increased drought. </p>
 									<div class="image main" data-position="center">
 										<img src="images/omakuva2.jpg" alt="" />
 									</div>
@@ -69,11 +68,11 @@
 									<h3>Research interests</h3>
 									<p></p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-puzzle-piece">How do evolutionary processes, such as rapid evolution and local adaptation, affect ecological dynamics?</li>
-										<li class="icon solid fa-tree">Can functional traits be used to predict community- and ecosystem-level processes?</li>
-										<li class="icon solid fa-leaf">How does insect herbivory affect the host plant, and what are the ecosystem-level impacts of this?</li>
+										<li class="icon solid fa-puzzle-piece">How do species tolerate and respond to environmental stress, such as increased temperature and drought?</li>
+										<li class="icon solid fa-tree">What makes ecosystems resilient to disturbance?</li>
+										<li class="icon solid fa-leaf">What type of ecological knowledge is most needed to succesfully conserve and restore ecosystems?</li>
 										<li class="icon solid fa-balance-scale">What should be the priorities of ecological research? What type of research is useful?</li>
-										<li class="icon solid fa-question-circle">How can we make our academic instituions more democratic and sustainable? </li>
+										<li class="icon solid fa-question-circle">How can we dismantle and discontinue harmful practices and polluting industries, such as fossil fuels? </li>
 										<li class="icon solid fa-hourglass-half">What should the role of ecological researchers be in the times of the climate and ecological crises? </li>
 									</ul>
 								</div>
@@ -488,4 +487,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
