--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
 												<h4>The role of rapid evolution in enabling the spread and local adaptation of the invasive plant <i>Impatiens glandulifera</i></h4>
 												<p>Himalayan balsam (<i>Impatiens glandulifera</i>) was brought to Europe in 1839. Since then, it has spread across the continent from Southern Europe to Northern Scandinavia, replacing native plant communities. How is a species which is restricted to a relatively small geographic area in its native range able to establish and spread successfully across such a wide range of climatic and biotic conditions? I am studying the importance of local adaptation, phenotypic plasticity and enemy release in enabling the species to spread successfully.</p>
 											</div>
+										<article>
+											<a href="https://nph.onlinelibrary.wiley.com/doi/10.1111/nph.15338" class="image"><img src="images/caterpillar.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Community and ecosystem -level effects of insect herbivory in temperate forests</h4>
+												<p>In the UK, I studied how herbivory by caterpillars of Winter moth (<i>Operophtera brumata</i>) affect the gas exchange and chemistry of their host plant, oak (<i>Quercus robur</i>). </p>
+												<p>Read about the effects of insect herbivory on oak physiology in <a href="https://nph.onlinelibrary.wiley.com/doi/10.1111/nph.15338">New Phytologist</a>, and in <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0228157">Plos One</a>. This paper in <a href="https://doi.org/10.1002/ecy.2739">Ecology</a> describes the effects of early-season herbivory on the late-season insect community on oaks. And in this <a href="https://doi.org/10.5194/we-24-97-2024">recent paper</a> I estimate the effects of insect herbivory on the carbon cycle of a temperate forest.</p>
+											</div>
 									</div>
 								</div>
 							</section>
@@ -489,6 +496,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
